load(":toolchain.bzl", "typst_toolchain")

typst_toolchain(
    name = "typst_macos",
    compiler = "@typst-aarch64-apple-darwin//:typst_aarch64_darwin_bin",
)

toolchain(
    name = "typst_macos_toolchain",
    exec_compatible_with = [
        "@platforms//os:macos",
        "@platforms//cpu:aarch64",
    ],
    toolchain = "//:typst_macos",
    toolchain_type = ":typst_toolchain_type",
)

typst_toolchain(
    name = "typst_linux",
    compiler = "@typst-x86_64-unknown-linux-musl//:typst_x86_64_unknown_linux_musl_bin",
)

toolchain(
    name = "typst_linux_toolchain",
    exec_compatible_with = [
        "@platforms//os:linux",
        "@platforms//cpu:x86_64",
    ],
    toolchain = "//:typst_linux",
    toolchain_type = ":typst_toolchain_type",
)

toolchain_type(
    name = "typst_toolchain_type",
    visibility = ["//visibility:public"],
)